--- a/bujetto-server/Bujetto.webapi/src/Bujetto.webapi/project.json
+++ b/bujetto-server/Bujetto.webapi/src/Bujetto.webapi/project.json
@@ -1,6 +1,5 @@
-﻿{
+{
   "dependencies": {
-    
     "Microsoft.AspNetCore.Mvc": "1.0.0",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
@@ -13,7 +12,8 @@
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.2",
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
-    "System.ComponentModel.Annotations": "4.1.0"
+    "System.ComponentModel.Annotations": "4.1.0",
+    "WebApiRouteDebugger": "1.0.0"
   },
 
   "tools": {
