--- a/bujetto-client/package.json
+++ b/bujetto-client/package.json
@@ -4,11 +4,34 @@
   "description": "bujetto react ui",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^1.13.2"
+    "axios": "^0.14.0",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-survivejs-kanban": "^0.3.3",
+    "css-loader": "^0.25.0",
+    "node-uuid": "^1.4.7",
+    "npm-install-webpack-plugin": "^4.0.4",
+    "react": "^15.3.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-merge": "^0.14.1"
+  },
+  "dependencies": {
+    "node-uuid": "^1.4.7",
+    "react-dom": "^15.3.2"
   }
 }
