--- a/bujetto-client/package.json
+++ b/bujetto-client/package.json
@@ -31,7 +31,9 @@
     "webpack-merge": "^0.14.1"
   },
   "dependencies": {
+    "dateformat": "^1.0.12",
     "node-uuid": "^1.4.7",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-router": "^2.8.1"
   }
 }
