--- a/bujetto-server/Bujetto.webapi/src/Bujetto.webapi/project.json
+++ b/bujetto-server/Bujetto.webapi/src/Bujetto.webapi/project.json
@@ -13,7 +13,8 @@
     "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.2",
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
     "System.ComponentModel.Annotations": "4.1.0",
-    "WebApiRouteDebugger": "1.0.0"
+    "WebApiRouteDebugger": "1.0.0",
+    "Microsoft.Extensions.Configuration.CommandLine": "1.0.0"
   },
 
   "tools": {
