--- a/bujetto-client/package.json
+++ b/bujetto-client/package.json
@@ -10,6 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+
+  },
+  "dependencies": {
+    "dateformat": "^1.0.12",
+    "node-uuid": "^1.4.7",
+    "react-dom": "^15.3.2",
+    "react-router": "^2.8.1",
     "axios": "^0.14.0",
     "babel": "^6.5.2",
     "babel-cli": "^6.16.0",
@@ -22,7 +29,6 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-survivejs-kanban": "^0.3.3",
     "css-loader": "^0.25.0",
-    "node-uuid": "^1.4.7",
     "npm-install-webpack-plugin": "^4.0.4",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
@@ -30,11 +36,5 @@
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2",
     "webpack-merge": "^0.14.1"
-  },
-  "dependencies": {
-    "dateformat": "^1.0.12",
-    "node-uuid": "^1.4.7",
-    "react-dom": "^15.3.2",
-    "react-router": "^2.8.1"
   }
 }
